Labs/04 Services/01 Services/04_nginx-loadbalancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        tier: frontend
    spec:
      containers:
      - name: nginx
        image: "nginxdemos/hello"
        ports:
        - containerPort: 8080
