Labs/04 Services/01 Services/02_nginx-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
  labels:
    run: nginx
spec:
  ports:
  - port: 8080
    targetport: 80
    protocol: TCP
  selector:
    run: nginx
