Labs/04 Services/01 Services/03_nginx-service-clusterip-targetport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip-targetport
  labels:
    app: nginx
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: nginx
