Labs/04 Services/01 Services/03_nginx-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
 name: nginx-service-clusterip
spec:
 type: ClusterIP
 selector:
    app: nginx
 ports:
 - port: 80
   targetPort: 80
