Labs/04 Services/01 Services/03_nginx-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
 name: nginx-nodeport
spec:
 type: NodePort
 selector:
    app: nginx
 ports:
 - port: 8080
   targetPort: 8080
   nodePort: 31000
