Labs/04 Services/01 Services/04_nginx-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngingx-nodeport
  labels:
    run: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 31000
  selector:
    run: nginx
