Labs/04 Services/01 Services/04_service-nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world-nodeport
  name: hello-world-nodeport
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-nodeport
  template:
    metadata:
      labels:
        app: hello-world-nodeport
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:1.0
        name: hello-app
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-nodeport
  labels:
    app: hello-world-nodeport
spec:
  type: NodePort
  selector:
    app: hello-world-nodeport
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 30000
