Labs/04 Services/01 Services/05_nginx-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngnx-srvclb
spec:
  selector:
    app: nginx
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
  type: LoadBalancer
