Labs/04 Services/01 Services/06_nginx-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngingx-loadbalancer
  labels:
    run: nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    run: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      run: nginx
  replicas: 3
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
