Labs/04 Services/01 Services/08_metalLB-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: metalLB-loadbalancer
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
  type: LoadBalancer
