Labs/04 Services/01 Services/09_nginx-service-externalip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-externalip
  labels:
    run: nginx
spec:
  ports:
  - port: 80
  externalIPs:
  - HOSTIP
  selector:
    run: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      run: nginx
  replicas: 3
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
