Labs/04 Services/01 Services/13_web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-virtualhost
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: httpd.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: httpd-service
          servicePort: 80
  - host: nginx.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
